feat: enhance permission ui
